[package]
name = "qplan"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "Compile a typed query AST (qexpr) into execution-friendly plans (prime-ideal: planning)."
repository = "https://github.com/arclabs561/qplan"
homepage = "https://github.com/arclabs561/qplan"
documentation = "https://docs.rs/qplan"
publish = true
readme = "README.md"
keywords = ["ir", "query", "planning", "ast", "retrieval"]
categories = ["text-processing", "algorithms"]

[workspace]

[dependencies]
qexpr = "0.1.0"
thiserror = "2.0"

[dev-dependencies]
egg = "0.11"
proptest = "1.5"

